Fix: Chevron icons are not aligned vertically on Calendars Next/Back buttons (#42)

--- a/src/app/demo/components/apps/calendar/calendar.app.component.scss
+++ b/src/app/demo/components/apps/calendar/calendar.app.component.scss
@@ -1,6 +1,15 @@
 :host ::ng-deep {
+    .fc-toolbar-chunk {
+        display: flex;
+
+        .fc-button-group > button {
+            display: flex;
+            align-items: center;
+        }
+    }
+
     .fc.fc-theme-standard .fc-highlight {
-        background-color: var(--primary-100)
+        background-color: var(--primary-100);
     }
 }
 
